# pdf-parser

./: .env.example  ASYNC_BATCH_PROCESSOR.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  PROJECT_SPECIFICATION.md  README.md  demo_async_batch.py  example_async_usage.py  extractions.db  pdf_for_tests.xml  pdf_parser.db  pyproject.toml  requirements.txt  temp.py  temp2.py  validate_setup.py
src/: app.py
src/pdf_parser/: __init__.py
src/pdf_parser/config/: __init__.py
src/pdf_parser/database/: __init__.py  database_manager.py  extraction_repository.py
src/pdf_parser/exceptions/: __init__.py  exceptions.py
src/pdf_parser/extractors/: __init__.py  ai_extractor.py  classic_extractor.py  data_extractor.py  text_extractor.py
src/pdf_parser/models/: __init__.py
src/pdf_parser/processors/: __init__.py  async_pdf_processor.py  batch_processor.py  pdf_processor.py  streamlit_batch_processor.py
src/pdf_parser/ui/: __init__.py  field_selector.py  ui_renderer.py
src/pdf_parser/validators/: __init__.py  validators.py
tests/: __init__.py  conftest.py  test_async_processors.py  test_database.py  test_extractors.py  test_processors.py  test_processors_old.py  test_validators.py
